# cxx_labs

tp1/cppma-spring2025-lab1/CPPMA-Spring2025-Lab1/: CMakeLists.txt  trace.cxx
tp2/: README.md  main.cxx  makefile  traceur.py
tp2/demo/: traceur.py
tp2/include/: particule.hxx
tp2/src/: particule.cxx
tp2/test/: test_perfs_creation.cxx  test_planetes.cxx
tp3/cppma-spring2025-lab3-infra/Lab3-Infra/: CMakeLists.txt  README.md
tp3/cppma-spring2025-lab3-infra/Lab3-Infra/include/: particule.hxx  univers.hxx  vecteur.hxx
tp3/cppma-spring2025-lab3-infra/Lab3-Infra/src/: CMakeLists.txt  main.cxx  particule.cxx  particule.hxx  test_point.cxx  univers.cxx  univers.hxx  vecteur.cxx  vecteur.hxx
tp3/cppma-spring2025-lab3-infra/Lab3-Infra/test/: CMakeLists.txt  test_particules1.cxx  test_particules2.cxx  test_particules3.cxx
tp4/: README.md
tp4/simulation/: simu1.vtu
tp4/src/: CMakeLists.txt  affichage.cxx  affichage.hxx  cellule.cxx  cellule.hxx  main.cxx  particule.cxx  particule.hxx  test_point.cxx  univers.cxx  univers.hxx  vecteur.cxx  vecteur.hxx  visu.vtu
tp4/test/: CMakeLists.txt
tp6/: CMakeLists.txt  README.md
tp6/include/: univers.hxx  vecteur.hxx
tp6/src/: CMakeLists.txt  affichage.cxx  cellule.cxx  limite.hxx  main.cxx  particule.cxx  particule.hxx  traceur.py  univers.cxx  univers.hxx  vecteur.cxx
tp6/test/: CMakeLists.txt  test_absorption.cxx  test_period.cxx  test_reflex.cxx  test_reflex_pot.cxx
